test/asm/section-union-data.asm
SECTION UNION "wat", ROM0
db 42
